[package]
name = "cantv3"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.13"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Audio dependencies
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
# File dialog dependency
rfd = "0.11"
# Font rendering
ab_glyph = "0.2"